--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 背书包的小屁孩儿
+title: 潘柏信
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
-avatarDesc: Android/java
-url: "http://xiaopihaier.github.io"
+avatarDesc: iOS / 机器学习
+url: "http://baixin.io"
 
 # Comment
 comment:
@@ -15,21 +15,21 @@ comment:
 
 # Social
 social:
-    weibo:
-    github: xiaopihaier
-    # twitter:
-    mail: bzdqsml.1@gmail.com
+    weibo: 5366874726 
+    github: leopardpan
+    # twitter: 
+    mail: leopardpan@icloud.com
 
-# 百度统计
-# 使用博客模板请去掉或者更换 id
+# 百度统计 
+# 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 5a73dd1f48c5a3d493dc3d1328534f73
+    id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
 ga:
-    id: UA-84134159-3
-    host: auto
+    id: UA-84134159-3   
+    host: auto  
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
@@ -57,12 +57,14 @@ blog_button:
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: 所有文章, description: archive, url: '/archive'}
-    - {title: 标签, description: tags, url: '/tags'}
-    - {title: 关于我, description: about, url: '/about'}
-
+    - {title: 所有文章, description: archive, url: '/archive'}   
+    - {title: 标签, description: tags, url: '/tags'}      
+    - {title: 关于我, description: about, url: '/about'}      
+    
 
 # Pagination
 gems: [jekyll-paginate,jekyll-sitemap]
 paginate: 20
 paginate_path: "page/:num/"
+
+
