--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 背书包的小屁孩儿
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: 背书包的小屁孩儿
+avatarTitle: baby
 # 头像里面的描述
 avatarDesc: android / java
 url: "http://xiaopihaier.github.io"
